mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/experimental/import/experimental_solidity_wrong_evm_version.sol
pragma experimental solidity;

contract C {}

// ====
// experimental: true
// EVMVersion: <constantinople
// ----
// ParserError 7637: (31-39): Experimental solidity requires Constantinople EVM version at the minimum.
